force-app/main/default/objects/Assets__c/fields/IntelligentOfficeId__c.field-meta.xml
<CustomField>
    <fullName>IntelligentOfficeId__c</fullName>
    <description>Reference to the ID of the asset in Intelligent Office.</description>
    <externalId>true</externalId>
    <label>Intelligent Office ID</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>