force-app/main/default/objects/Assets__c/fields/OW_status__c.field-meta.xml
<CustomField>
    <fullName>OW_status__c</fullName>
    <description>This field captures the current status of an asset, indicating whether it&#39;s owned or not, and for what reason if not.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Deleted by client</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Surrendered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>