force-app/main/default/objects/Assets__c/fields/Percentage_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Ownership__c</fullName>
    <label>Percentage Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>