force-app/main/default/objects/Assets__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>To record the date and time the asset record was last modified on the platform
Updated by nova service</description>
    <label>Platform Last Modified Date Time</label>
    <type>DateTime</type>
</CustomField>