force-app/main/default/objects/Assets__c/fields/Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Value__c</fullName>
    <label>Purchase Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>