force-app/main/default/objects/Assets__c/fields/Related_Liability__c.field-meta.xml
<CustomField>
    <fullName>Related_Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Liability</label>
    <referenceTo>Liabilities__c</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>