force-app/main/default/objects/Assets__c/fields/Rental_Income_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income_Frequency__c</fullName>
    <label>Rental Income Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>