force-app/main/default/objects/Assets__c/fields/Retained_Earnings__c.field-meta.xml
<CustomField>
    <fullName>Retained_Earnings__c</fullName>
    <label>Retained Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>