force-app/main/default/objects/Assets__c/recordTypes/Business_Ownership.recordType-meta.xml
<RecordType>
    <fullName>Business_Ownership</fullName>
    <active>true</active>
    <label>Business Ownership</label>
</RecordType>