force-app/main/default/objects/Assets__c/recordTypes/Other_Asset.recordType-meta.xml
<RecordType>
    <fullName>Other_Asset</fullName>
    <active>true</active>
    <label>Other Asset</label>
</RecordType>