force-app/main/default/objects/Assets__c/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <label>Property</label>
</RecordType>